Add GroupResource and GroupService
